@@ -138,7 +138,7 @@ void OnlineServicesPage::showEvent(QShowEvent *e)
 void OnlineServicesPage::clear()
 {
     OnlineServicesModel::self()->clear();
-    view->setLevel(0);
+    view->goToTop();
 }
 
 OnlineService * OnlineServicesPage::activeSrv() const
@@ -229,7 +229,7 @@ void OnlineServicesPage::addSelectionToPlaylist(const QString &name, bool replac
 void OnlineServicesPage::refresh()
 {
     OnlineServicesModel::self()->resetModel();
-    view->setLevel(0);
+    view->goToTop();
     expandPodcasts();
 }
 
